style.css
html,body{
    /* font-family: 'Josefin Sans', sans-serif; */
    /* background-color: tra; */
    margin: 0;
    padding: 0;
}

.site-wrapper{

    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.left-side{
    display: fixed;
    width: 33%;
    /* position:fixed;
    top:0;
    left:0; */
    height: 110vh;
    background-color: rgb(15, 129, 196);
    /* font-family: 'Open Sans Condensed', sans-serif; */
    font-family: 'PT Sans Narrow', sans-serif;
    
}

.font-wrapper{
    position: fixed;
    right: 0;
    bottom: 0;
    width: 25%;
    text-align: center;
    background-color: rgba(0,0,0,0.3);
    margin: 15px;
    padding: 10px;
    /* visibility: hidden; */
}


.font-size{
    display: flex;
    
}

.font-size button{
    width: 100%;
    /* font-family: 'PT Sans Narrow', sans-serif; */
    padding: 5px;
    margin: 1px;
}

#close{
    position: absolute;
    background-color: white;
    right: 0;
    font-size: 15px;
    top: -15px;
}


.right-side{
    /* position:absolute; */
    /* background-color: gray; */
    z-index: -1;
    
    /* background: url('../my_site/images/bg-blur.jpg') no-repeat center center fixed;
    background-size: cover; */
    color: black;
    background-color: #d2d2e2;
    /* top:0vh;
    left:30%; */
    /* min-width: 70%; */
    width: 67%;
    display: flex;
    flex-wrap:wrap;
    /* font-family: 'Open Sans Condensed', sans-serif; */
    font-family: 'PT Sans Narrow', sans-serif;
    height: auto;
    /* display: grid; */
    /* grid-auto-flow: row; */
    /* grid-template-areas: "education experience"
                        "skills experience";
    place-items:center; */
    
    /* justify-content: center; */
    

    
}

.right-side-leftcontainer{
    /* position:absolute; */
    width: 50%;
    height: 100vh;
    
    

    
}

.right-side-rightcontainer{
    width: 50%;  
    height: 100vh;
    
    
    
    
}

/* .right-side:after{
    filter: blur(3px);
} */


.main-content{
    
    padding-top: 13%;
    text-align:center;
    justify-content:center;
    display: flex;
    flex-wrap: wrap;
    /* display:grid;
    grid-auto-flow:row; */
    font-size: 22px;
    
    width: 60%;
    margin:auto;
    
}

#my-title{
    /* font-weight:bold; */
}

.contact-content{
    padding-top: 3%;
    padding-bottom: 5%;
    font-size: 18px;
    /* text-align:center; */
    text-align: center;
}


.contact-content i{
    height: 20px;
    width: 20px;
    padding-right: 2%;
    text-align: left;
}

.about-content{
    padding-top: 5%;
    width: 75%;
    margin:auto;
    text-align: justify;
    padding-bottom: 5%;
    font-size: 18px;
    
}

#my-name{
    font-family: 'Bebas Neue', cursive;
    padding-top: 10%;
    font-size: 60px;
}

#my-picture{
    width: 250px;
    height: auto;
    border-radius: 50%;
}

#hr-left{
    width: 50%; height: 1px; border: none; background-color: black;
}

#hr-right{
    width: 20%;
    height: 10px;
    border: none;
    background-color: rgb(12, 119, 179);
    margin-left: 0;
}

/* .right-side-content-wrapper{
    margin-top: 5%;
    padding-bottom: 5%;
    margin-left: 5%;
    margin-right: 5%;
    height: 75%;
    width: auto;
    background-color: gainsboro;
} */

#right-title{
    font-family: 'Bebas Neue', cursive;
    font-size: 60px;
}

/* .title-holder{
    width: 20%;
} */

.content-holder{
    padding-top: 5px;
}

#content-title{
    font-family: 'Jost', sans-serif;
    font-size: 20px;
}

#content-subtitle{
    font-size: 17px;
    text-align: justify;
        display:block;
    
}

.right-content{
    /* text-align: center; */
    width: 75%;
    margin: auto;
    padding-top: 7%;
    /* margin: 15%; */
    
    
}

/* #education{
    width: 60%;
    margin: auto;
}

#skills{
    margin-left: 100px;
} */

#experience{
    margin-left: 0;
}



.element {  
    padding: 5px 0;
}



@media only screen and (max-width: 700px) {
    .left-side{
        width: 100%;
        height: 100vh;
    
    }
    .right-side{
        width: 100%;
    } 

    .right-side-leftcontainer{
        width: 100%;
        height: auto;
        padding-top: 50px;
    }

    .right-side-rightcontainer{
        width: 100%;
        height: auto;
        padding-bottom: 150px;
        
    }

    .main-content{
        padding-top: 7%;
        
    }

    #my-title{
        font-weight: bold;
    }

    #my-picture{
        width: 200px;
        height: auto;
    
    }

    #experience{
        margin:auto;
    }

    #content-title{
        font-size: 5.1vw;
    }
    
    #content-subtitle{
        font-size: 4vw;
        
        
    }

    .contact-content{
        padding-bottom: 3%;
    }

    .about-content{
        font-size: 18px;


        text-align: justify;
        
    }

    #my-name{
        font-size: 12vw;
        padding-top:5%;
    }

    #right-title{
        font-size: 12vw;
    }



    
  }

